esphome/internal: Java11 compatibility
Avoid using extended features, not present in JDK 11